--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.internal.http.connectionTimeout=60000
 org.gradle.internal.http.socketTimeout=60000
-
+groupId=io.github.marquezproject
+artifactId=marquez-java
 version=0.3.1-SNAPSHOT
